--- a/frontend/src/template/custom.css
+++ b/frontend/src/template/custom.css
@@ -6,3 +6,11 @@
     text-decoration: line-through;
     color: #777;
 }
+
+.tableActons{
+    width: 105px;
+}
+
+.todoForm{
+    padding-bottom: 60px;
+}
